--- a/style.css
+++ b/style.css
@@ -117,3 +117,88 @@ p{
     margin-right: auto;
     
 }
+
+/*----------SKILLS PAGE CSS-------------*/
+
+#title{
+    text-align:center;
+    
+}
+#title h1{
+    text-align:center;
+    font-family:SourceSansPro-Black;
+    font-size: 80px;
+    font-weight: 700;
+    color:white;
+    text-transform: uppercase;
+    letter-spacing:0.05em;
+    margin-bottom:20px;
+    padding-top:100px;
+}
+
+#skills a{
+    font-family:SourceSansPro-Black;
+    float:center;
+    display:inline-block;
+    margin-left: 10px;
+    color: rgba(255,255,255,0.7);
+    font-size: 17px;
+    font-weight: 700;
+    
+    
+    text-decoration: none;
+    text-transform: uppercase;
+    
+}
+#skills a:hover{
+    color: red;
+}
+
+table tr td{
+    width:200px;
+}
+
+table.center {
+    margin-left:auto; 
+    margin-right:auto;
+     font-size:20px;
+    font-family:SourceSansPro-Black;
+    color:#ffffff;
+    text-align: center;
+}
+
+/*----------ANGULAR ANIMATIONS-------------*/
+[ui-view].ng-enter, [ui-view].ng-leave {
+  -webkit-transition:all .15s ease-in-out;
+  -moz-transition:all .15s ease-in-out;
+  -o-transition:all .15s ease-in-out;
+  transition:all .15s ease-in-out;
+}
+
+[ui-view].ng-enter {
+  opacity: 0;
+  -webkit-transform:scale3d(0.75, 0.75, 0.75);
+  -moz-transform:scale3d(0.75, 0.75, 0.75);
+  transform:scale3d(0.75, 0.75, 0.75);
+}
+
+[ui-view].ng-enter-active {
+  opacity: 1;
+  -webkit-transform:scale3d(1, 1, 1);
+  -moz-transform:scale3d(1, 1, 1);
+  transform:scale3d(1, 1, 1);
+}
+
+[ui-view].ng-leave {
+  opacity: 1; 
+  -webkit-transform:scale3d(0.75, 0.75, 0.75);
+  -moz-transform:scale3d(0.75, 0.75, 0.75);
+  transform:scale3d(0.75, 0.75, 0.75);
+}
+
+[ui-view].ng-leave-active {
+  opacity: 0;
+  -webkit-transform:scale3d(0.75, 0.75, 0.75);
+  -moz-transform:scale3d(0.75, 0.75, 0.75);
+  transform:scale3d(0.75, 0.75, 0.75);
+}
